<?xml version="1.0"?>
<package>
  <name>aero_teleop</name>
  <version>2.1.0</version>
  <description>The aero_teleop package</description>
  <maintainer email="sasabuchi@jsk.imi.i.u-tokyo.ac.jp">Kazuhiro Sasabuchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>aero_std</build_depend>

  <run_depend>yocs_cmd_vel_mux</run_depend>

  <export>
  </export>
</package>
